 - function qualifiers (goffy)
 - replaced tabs (goffy)
 - dirname levels (goffy)
 - php inspection code (goffy)
 - security.md (goffy)
 - new update with db migration (goffy)
 - replaced Common/XoopsConfirm by Common/Confirm (mamba/goffy)
 - uninstall with bak-file creation (mamba/goffy)
 - added clone feature (goffy)
 - adapted update due to new semantic versioning (goffy)
 
<h5>1.10 Final</h5> [2020/07/03]
<hr>
 - moved to final (goffy)
 - default value for new relation 999 to show them at the end of the list (goffy)
 
<h5>1.10 RC1</h5> [2020/02/09]
<hr>
 - added maintenance / cleaning unused images (goffy)
 - fixed bug with mimetype when cropping image (goffy)
 - added maintenance / check space (goffy)

<h5>1.09 RC4</h5> [2019/09/17]
<hr>
 - added option to resize image during upload or not (goffy)
 - added new block style 'list' (goffy)
 - added filter team in admin/relations (goffy)
 - added info about conditions for image upload (goffy)
 - fixed missing check of allowed resolution (goffy)
 
<h5>1.09 RC3</h5> [2019/09/17]
<hr>
 - fixed bug image editor (goffy) 
 - new preference for default size image editor (goffy)
 - new preference for show/hide copyright (goffy)
 - fixed bug with upload very big jpg images (goffy)
 - fixed bug with cropping images (goffy)
 
<h5>1.09 RC2</h5> [2019/04/09]
<hr>
 - fixed bug in block templates (goffy)
 - added few options to teams block (goffy)
 - added bootstrap card style to teams block (goffy) 
 
<h5>1.09 RC1</h5> [2019/04/09]
<hr>
 - moved to RC1 (goffy)
 - cosmetics for image editor (goffy)
 - fixed bug with id in image editor (goffy)
 - fixed bug with non show member title (goffy)
 - new preference "wgteams_showteamname" (goffy)
 - new preference "wgteams_labels_member" (replace "wgteams_labels") (goffy)
 - new preference "wgteams_labels_infofields" (goffy)

<h5>1.09 Beta</h5> [NOT RELEASED]
<hr>
 - added namespaces (mamba)
 - added test data option (goffy)
 - fix Helper's getHandler() (mamba)