@@ -212,8 +212,11 @@ class MigrateHelper
         } else {
             return false;
         }
-        $attributes = \trim(\str_replace([$name, '`', ','], '', $line));
 
+        $attributes = \trim(\str_replace([$name, '`'], '', $line));
+        if (',' == \substr($attributes, - 1)) {
+            $attributes = substr($attributes, 0, strlen($attributes) - 1);
+        }
         $columns['name'] = $name;
         // update quotes
         if (\strpos($attributes, "''") > 0) {
