@@ -15,6 +15,7 @@
  - uninstall with bak-file creation (mamba/goffy)
  - added clone feature (goffy)
  - adapted update due to new semantic versioning (goffy)
+ - fixed bug in MigrateHelper (goffy)
  
 <h5>1.10 Final</h5> [2020/07/03]
 <hr>
